fixes columns-content-vertically-centered spacing issue

--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -114,12 +114,12 @@ body.page:not(.twentyseventeen-front-page) .entry-content .wp-block-mkl-section-
 	}
 }
 
-.wp-block-columns + .wp-block-columns:not(.columns-content-vertically-centered),
-h1 + .wp-block-columns,
-h2 + .wp-block-columns,
-h3 + .wp-block-columns,
-h4 + .wp-block-columns,
-h5 + .wp-block-columns {
+.wp-block-columns + .wp-block-columns,
+h1 + .wp-block-columns:not(.columns-content-vertically-centered),
+h2 + .wp-block-columns:not(.columns-content-vertically-centered),
+h3 + .wp-block-columns:not(.columns-content-vertically-centered),
+h4 + .wp-block-columns:not(.columns-content-vertically-centered),
+h5 + .wp-block-columns:not(.columns-content-vertically-centered) {
 	margin-top: -2rem;
 
 	@media (min-width: 600px) {
